--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,26 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+     <title>
+      Beauty Parlour & Salon Services at Home in Hyderabad | Saloon
+    </title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Book expert beauty parlour and salon services at home in Hyderabad. From bridal makeup to facials, get pampered by certified beauticians at your doorstep."
     />
-    <title>React App</title>
+    <meta
+      name="keywords"
+      content="salon services at home Hyderabad, beauty parlour at home Hyderabad, home beauty services Hyderabad, bridal makeup Hyderabad, facial at home Hyderabad, hair spa at home Hyderabad, women's salon Hyderabad, doorstep beauty services Hyderabad, parlour at home service, professional beauticians Hyderabad"
+    />
+
+    <meta
+      property="og:title"
+      content="Salon & Beauty Parlour Services at Home in Hyderabad"
+    />
+    <meta
+      property="og:description"
+      content="Enjoy high-quality beauty services at home in Hyderabad – bridal makeup, facials, waxing & more by certified beauticians."
+    />
     <!-- BootStarp5 CDNs -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?v=1.1"
@@ -28,6 +43,7 @@
       crossorigin="anonymous"
       defer
     ></script>
+
 
     <!-- Awesome -->
     <link
